discussion/kv_engine/179400/179400_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Update frequencies for all Buckets when unified caching

Change-Id: Ib4554e41206f2c9c6b5f45362c32a54277b54564

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-31 08:17:16.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 08:29:50.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19829/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10: error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
#include "memcached/bucket_memory_manager.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19829/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19829/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48763/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/warmup.cc(27): fatal error C1083: Cannot open include file: "memcached/bucket_memory_manager.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48763/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40990/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40990/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9524/ : FAILURE

Compile error at [2022-08-31T08:19:25.276Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9524/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21072/ : FAILURE

Compile error at [2022-08-31T08:21:14.596Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21072/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21781/ : FAILURE

Compile error at [2022-08-31T08:25:21.862Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21781/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22870/ : FAILURE

Compile error at [2022-08-31T08:21:46.103Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22870/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22133/ : FAILURE

Compile error at [2022-08-31T08:20:50.354Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22133/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30162/ : FAILURE

Compile error at [2022-08-31T08:27:06.911Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30162/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9623/ : FAILURE

Compile error at [2022-08-31T08:25:14.322Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9623/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19050/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
